// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`array 1`] = `
Array [
  Object {
    "title": "Bury Us",
    "updates": Array [
      9,
      10,
    ],
  },
  Array [
    Object {
      "regex": Object {
        "lastIndex": 0,
      },
      "results": Array [
        Object {
          "otherActions": Array [],
          "title": "Stay Forever",
        },
      ],
    },
  ],
]
`;

exports[`cloneable 1`] = `
Object {
  "message": "Hello!",
  "song": Object {
    "index": 3,
  },
}
`;

exports[`object 1`] = `
Object {
  "message": "Hello!",
  "song": Object {
    "date": Any<Date>,
    "index": 3,
  },
}
`;
